samples/_failures_safe/1761307989_f45d56_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6e57ac1.c: In function ‘main’:
./samples/SAFE/__tmp_f6e57ac1.c:153:17: error: expected expression at end of input
  153 |                 } else
      |                 ^
./samples/SAFE/__tmp_f6e57ac1.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6e57ac1.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6e57ac1.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6e57ac1.c:153:17: error: expected declaration or statement at end of input
